--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
 title: Cybersec Notes – Theo
 description: Walkthroughs & offensive security notes
